<resources>
    <string name="app_name">My Class</string>
    <string name="title_activity_login_sample">Sign in</string>

    <!-- Strings related to login.. Delete them -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="title_activity_login">Login Activity</string>

    <!-- Authentication -->
    <string name="emailHint">Username or email</string>
    <string name="passwordHint">Password</string>
    <string name="sign_in_button">Sign in</string>
    <string name="sign_up_message">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="forgot_password">Forgot password?</string>
</resources>
